# nonlinear-least-squares

./: NonLinearLeastSquare.kdev4  meson.build
src/: NonLinearLeastSquare.cl  NonLinearLeastSquare.cpp
